<resources>
    <string name="app_name">FEO</string>
    <string name="action_settings">Settings</string>
    <string name="close">Close</string>
    <string name="asecondago" formatted="false">a second ago</string>
    <string name="aminuteago" formatted="false">a minute ago</string>
    <string name="anhourago" formatted="false">an hour ago</string>
    <string name="minutesago" formatted="false">%d minutes ago</string>
    <string name="hoursago" formatted="false">%d hours ago</string>
    <string name="secondsago" formatted="false">%d seconds ago</string>
    <string name="yesterday" formatted="false">Yesterday</string>
    <string name="daysago" formatted="false">%d days ago</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="add">Add</string>
    <string name="pastetext">Paste Text</string>
    <string name="file">File TXT</string>
    <string name="setting">Setting</string>
    <string name="reading_speed_wpm">Reading speed (WPM)</string>
    <string name="number_of_lines">Number of lines</string>
    <string name="group_size">Group size</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="doyouwanttosaveitintolibrary">Do you want to save it into library ?</string>
    <string name="sorrythereisnowordsthatcanplay">Sorry, there is no words that can play</string>
    <string name="sorryyoucannotaddnewlibrary">Sorry, you cannot add new library because your library was full</string>
    <string name="pleaseinputyourtextinhere">Please input your text in here</string>
    <string name="pleaseinputthetitleforthislibrary">Please input the title for this library</string>
    <string name="speedreading">Speed Reading</string>
    <string name="speedreadingfeo">Speed Reading FEO</string>
    <string name="library">Library</string>
    <string name="please_input_the_title_in_here">Please input the title in here</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgetpassword">Forget password ? Please send an email to feodeveloper@gmail.com by including your username, we wil reset your password and send to your email</string>
    <string name="finish">Finish</string>
    <string name="got_it">Got it</string>
    <string name="permissionrequestmessage" formatted="false">Need to activate several permission in order to use this app</string>
    <string name="no">No</string>
    <string name="your_answer">Your answer</string>
    <string name="correct_answer">Correct answer</string>
    <string name="wpm">WPM</string>
    <string name="highscore">High score : % WPM</string>
    <string name="result">Result</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="memory">Memory</string>
    <string name="image_speed_images_minute">image speed (images / minute)</string>
    <string name="font_size">Font size</string>
    <string name="background">Background</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account ? Sign up here</string>
    <string name="welcome">Welcome</string>
    <string name="full_name">Full name</string>
    <string name="retype_password">Retype password</string>
    <string name="register">Register</string>
    <string name="school_name">School name</string>
    <string name="class_name">Class name</string>
    <string name="information">Information</string>
    <string name="already_have_an_account_sign_in_here">Already have an account ? Sign in here</string>
    <string name="school_address">School address</string>
    <string name="email">Email</string>
    <string name="please_subscribe_to_get_full_access_into_feo">Please subscribe to get full access into FEO</string>
    <string name="please_fill_in_here">Please fill in here</string>
    <string name="profile">Profile</string>
    <string name="home_address">Home address</string>
    <string name="change_password">Change password ?</string>
    <string name="account">Account</string>
    <string name="dots">.............</string>
    <string name="change_password1">Change password</string>
    <string name="logout">Logout</string>
    <string name="body">Body</string>
    <string name="date">date</string>
    <string name="no_notification">No notification</string>
    <string name="please_wait">Please wait</string>
    <string name="your_answer_is">Your answer is ?</string>
    <string name="tap_here">Tap here</string>
    <string name="tap_here_to_pause">Tap here to pause !</string>
    <string name="check_you_answer_here">Check you answer here</string>
    <string name="subscribe">Subscribe</string>
    <string name="price">Price :</string>
    <string name="check_out">Check out</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_text">
        <large><b>FEO Checkout &amp;</b></large>\n
        Transaction Date&amp;: %s\n
        Due Date             : %s\n\n
        Name             : %s\n
        Email            : %s\n
        Username         : %s\n\n
        <b>Item</b>\n
        Plan name        : %s\n
        Duration         : %d Month(s)\n\n

        <b>Total Price</b>\n
        Rp. %d
    </string>
    <string name="transaction_date">Transaction date</string>
    <string name="due_date">Due date</string>
    <string name="plan_name">Plan name</string>
    <string name="duration">Duration</string>
    <string name="item">Item</string>
    <string name="total_price">Total price</string>
    <string name="title_atm_bersama">
        Payment via <b>ATM Mandiri / ATM Bersama</b> :
    </string>
    <string name="instruction_atm_bersama">1. On the main menu, select Other Transactions.\n2. Select Transfer.\n3. Select Another Bank Online.\n4. Enter the number 013 virtual account number (code 013 and the 16 digit virtual account).\n5. Enter the payment amount completely. Your payment will be automatically rejected if the amount does not comply.\n6. Please recheck the amount transaction and the account number transfer destination on the confirmation page. Press "Yes" to continue.\n
    </string>
    <string name="title_atm_prima_bca">Payment through <b>ATM BCA / ATM PRIMA</b> :</string>
    <string name="instruction_atm_prima_bca">1. On the main menu, select Other Transactions.\n2. Select Transfer.\n3. Select Another Bank Online.\n4. Enter the bank code 013 then press "yes".\n5. Enter the payment amount completely. Your payment will be automatically rejected if the amount does not comply.\n6. Enter the 16 digit no. Virtual account payment and then press "Correct".\n7. Please recheck the amount transaction and the account number transfer destination on the confirmation page. Press "Yes" to continue.\n
    </string>
    <string name="title_atm_bank_permata">
        Payment through <b>ATM Bank Permata / ATM Alto</b> :
    </string>
    <string name="instruction_atm_bank_permata">1. On the Main Menu, select Other Transactions.\n2. Choose Payment Transactions.\n3. Select Other.\n4. Select Payment Virtual Account.\n5. Enter your 16 digits no. Virtual Account\n6. On the confirmation page will appear no. virtual account and bill number, then press "yes"\n7. Choose your payment account and press "yes".\n
    </string>
    <string name="your_virtual_account">Your Virtual account</string>
    <string name="your_payment_s">Your payment :&#160;</string>
    <string name="expired_in_s">Expired in </string>
    <string name="hours">Hour(s) :</string>
    <string name="minutes">Minute(s) :</string>
    <string name="Seconds">Second(s)</string>
    <string name="cancel_payment">Cancel Payment</string>
    <string name="doyouwanttocancelthispayment">Do you want cancel this payment?</string>
    <string name="downloadcomplete">Download complete</string>
    <string name="uploadcomplete">Upload complete</string>
    <string name="payment_success_message_body">Thank you for purchasing our plan</string>
    <string name="payment_failed_message_body">Sorry transaction failed, please subscribe again.</string>
    <string name="payment_success_message_title">Payment Success</string>
    <string name="payment_failed_message_title">Payment Failed</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="sessionexpiredcaption">Your session is expired</string>
    <string name="okay">okay</string>
    <string name="your_best_score">Your best score :</string>
    <string name="sorry_cannot_delete_admin_library">Sorry cannot delete admin library</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="guide">Guide</string>
    <string name="feo_guide" >
        1. Aturlah ukuran tulisan dan background melalui setting di menu depan terlebih dahulu dan lanjut mengatur speed di wpm, number of lines, atau group size dibawah lambang play.\n
        2. Buka library dan pilih salah satu judul yang sudah kami siapkan, atau yang sudah anda tambah sendiri.\n
        3. Jika sudah siap bermain silahkan Klik play, fokuskan mata di garis tengah dan bacalah dengan bersuara terlebih dahulu untuk mengetahui sebaik apakah lisan anda dalam membaca. Kami sarankan agar memakai number of lines 1 dan group size 1, dan jika sudah mampu dengan speed yang cepat, maka silahkan lanjutkan ke tahap membaca dengan cara dilihat saja, tambahlah speed wpm nya secara bertahap.\n
        4. Untuk anak PAUD atau INKLUSI agar memakai judul PAUD yang sudah kami sediakan, pakailah speed rendah terlebih dahulu dan lanjutkan dengan menambah 10 wpm disetiap speednya, berilah bahasa motivasi terhadap anak anda.\n
        5. Latihlah mata dan otak anda setiap hari selama 15 hingga 30 menit,\n
        6. <b>SELAMAT BERLATIH.</b>
    </string>
    <string name="guide_feo_1">Aturlah ukuran tulisan dan background melalui setting di menu depan terlebih dahulu dan lanjut mengatur speed di wpm, number of lines, atau group size dibawah lambang play.</string>
    <string name="guide_feo_2">Buka library dan pilih salah satu judul yang sudah kami siapkan, atau yang sudah anda tambah sendiri.</string>
    <string name="guide_feo_3">Jika sudah siap bermain silahkan Klik play, fokuskan mata di garis tengah dan bacalah dengan bersuara terlebih dahulu untuk mengetahui sebaik apakah lisan anda dalam membaca. Kami sarankan agar memakai number of lines 1 dan group size 1, dan jika sudah mampu dengan speed yang cepat, maka silahkan lanjutkan ke tahap membaca dengan cara dilihat saja, tambahlah speed wpm nya secara bertahap.</string>
    <string name="guide_feo4">Untuk anak PAUD atau INKLUSI agar memakai judul PAUD yang sudah kami sediakan, pakailah speed rendah terlebih dahulu dan lanjutkan dengan menambah 10 wpm disetiap speednya, berilah bahasa motivasi terhadap anak anda.</string>
    <string name="guide_feo_5">Latihlah mata dan otak anda setiap hari selama 15 hingga 30 menit,</string>
    <string name="guide_feo_6">SELAMAT BERLATIH.</string>
    <string name="guide_feo_champ_1">Buka library dan pilih salah satu judul yang sudah kami siapkan atau yang sudah anda tambah sendiri.</string>
    <string name="guide_feo_champion_2">Atur wpm secara bertahap, anda hanya bisa mengatur ukuran tulisan dan background serta mengatur wpm sesuai dengan kemampuan anda.</string>
    <string name="guide_feo_champion_3">Klik pause, dan jawablah pertanyaan dari FEO,\'SEBUTKAN SATU KATA DIBALIK KATA YANG BERHENTI\'. INGAT...! KETIKLAH JAWABAN DENGAN \'TANPA TANDA BACA\'.</string>
    <string name="guide_memory_1">Aturlah image speed terlebih dahulu.</string>
    <string name="guide_memory_2">Klik layar, dan hapalkan gambarnya.</string>
</resources>