<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="101"
        android:icon="@drawable/ic_icon_add_queue"
        android:title="@string/add"
        app:showAsAction="always" >

        <menu>

            <item
                android:id="@+id/action_add_text"
                android:title="@string/pastetext" />

            <item
                android:id="@+id/action_add_file"
                android:title="@string/file" />

        </menu>

    </item>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:icon="@drawable/ic_icon_help_round"
        android:title="@string/help"
        app:showAsAction="always" />
</menu>
