<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal">

            <com.app.infideap.stylishwidget.view.ATextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/colorBlack_1000"
                android:gravity="center"
                android:padding="@dimen/margin_small"
                android:textAppearance="@style/TextStyle.Medium"/>

            <com.app.infideap.stylishwidget.view.ATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="@style/TextStyle.Medium"
                />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_xsmall" />

            <com.app.infideap.stylishwidget.view.AEditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditText.RoundBorder"
                />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_small" />


            <com.app.infideap.stylishwidget.view.ATextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="@style/TextStyle.Medium"
                />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_xsmall" />

            <com.app.infideap.stylishwidget.view.AEditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditText.RoundBorder"
                />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_small" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.app.infideap.stylishwidget.view.AButton
                android:id="@+id/button_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Button.Danger.Fill"
                android:text="@string/cancel"
                />


            <com.app.infideap.stylishwidget.view.AButton
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Button.Success.Fill"
                android:text="@string/save"
                />
        </LinearLayout>
    </LinearLayout>
</layout>
