<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.app.infideap.stylishwidget.view.ATextView
                    android:id="@+id/textView_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title"
                    android:padding="@dimen/margin_small"
                    android:textAppearance="@style/TextStyle.Large"
                    android:textColor="@color/colorBlack_1000"
                    />

                <com.app.infideap.stylishwidget.view.ATextView
                    android:id="@+id/textView_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:padding="@dimen/margin_small"
                    android:textAppearance="@style/TextStyle.Large"
                    android:textColor="@color/colorBlue_800"
                    />

            </LinearLayout>

            <com.app.infideap.stylishwidget.view.ATextView
                android:id="@+id/textView_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/body"
                android:padding="@dimen/margin_small"
                android:textAppearance="@style/TextStyle.Medium"
                android:textColor="@color/colorBlack_1000"
                />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_xsmall" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorLine"/>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/margin_small" />
        </LinearLayout>

    </RelativeLayout>
</layout>
