<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controller.activity.SpeedReadingActivity"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/dialog_setting_speed_reading"
        >

        <com.app.infideap.stylishwidget.view.ATextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Setting speed reading"
            android:textAppearance="@style/TextStyle.Large"
            android:textColor="@color/colorBlack_1000"
            android:textStyle="bold" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_small">

            <com.app.infideap.stylishwidget.view.ATextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/font_size"
                android:textAppearance="@style/TextStyle.Medium"
                android:textColor="@color/colorBlack_1000" />

            <com.app.infideap.stylishwidget.view.ATextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.11"
                android:text=":"
                android:textAppearance="@style/TextStyle.Medium"
                android:textColor="@color/colorBlack_1000" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_small">

            <com.app.infideap.stylishwidget.view.ATextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/background"
                android:textAppearance="@style/TextStyle.Medium"
                android:textColor="@color/colorBlack_1000"
                />

            <com.app.infideap.stylishwidget.view.ATextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_weight="0.1"
                android:textAppearance="@style/TextStyle.Medium"
                android:textColor="@color/colorBlack_1000"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <com.app.infideap.stylishwidget.view.ARadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.app.infideap.stylishwidget.view.ARadioButton
                        android:id="@+id/radio_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/black"
                        android:textAppearance="@style/TextStyle.Medium"
                        />

                    <com.app.infideap.stylishwidget.view.ARadioButton
                        android:id="@+id/radio_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/white"
                        android:textAppearance="@style/TextStyle.Medium"
                        />
                </com.app.infideap.stylishwidget.view.ARadioGroup>
            </LinearLayout>


        </LinearLayout>

        <com.app.infideap.stylishwidget.view.AButton
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button.Info.Fill"
            android:text="@string/save"
            />


    </LinearLayout>
</layout>